methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:13: error: not enough arguments for method diag: (c: java.awt.Color, d: java.awt.Color, e: java.awt.Color, f: java.awt.Color)Unit.
Unspecified value parameters e, f.
  diag(Color.red,Color.blue)
      ^